testsuite/poke.pkl/cast-diag-1.pkl
/* { dg-do compile } */

defun bar = void: {}

defun foo = void:
  {
   defvar v = bar as int<32>; /* { dg-error "" } */
  }
